kuber/frog-app/frog-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frogrout
  namespace: frog
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`frog.local.m1xxos.me`)
    kind: Rule
    services:
    - name: frog
      port: 8080
  tls:
   secretName: local-m1xxos-me
